# EasyFileManager

./: .gitignore  README.md  logger.py  program.py  pyproject.toml
src/easy_file_manager/: __init__.py  cli.py  logger.py  processor.py
tests/: test_processor.py
